@@ -92,9 +92,9 @@ module Fairy
 
 	@value = find
 	@value_cv.broadcast 
-	@export.push find
-	# ちょっと気になる...
-	@export.push END_OF_STREAM
+#	@export.push find
+#	# ちょっと気になる...
+#	@export.push END_OF_STREAM
 
 	@bjob.update_find
       end
